--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
              </div>
               <div class="column right">
                  <div class="text">Message me</div>
-                 <form action="#"> 
+                 <form action="send_message.php" method="post">
                    <div class="fields">
                       <div class="field name">  
                           <input type="text" placeholder="Name" required>
